# mini-fis

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/coaches/: coach.cpp  coach.h
src/demos/: CMakeLists.txt  coach_demo.cpp  display_demo.cpp
src/displays/: CMakeLists.txt
src/logic/: CMakeLists.txt  get_next_reservation_tests.cpp  insert_reservation_tests.cpp  is_valid_for_route_tests.cpp  reservation_logic.cpp  reservation_logic.h
src/models/: CMakeLists.txt
src/models/coaches/: CMakelists.txt  coach.cpp  coach_tests.cpp
src/models/displays/: CMakeLists.txt  display.cpp  display.h  display_tests.cpp
src/models/reservations/: CMakeLists.txt  reservation.cpp  reservation.h  reservation_tests.cpp
src/models/vehicles/: CMakeLists.txt  vehicle.cpp  vehicle.h  vehicle_tests.cpp
src/reservations/: CMakeLists.txt  reservation.cpp
src/vehicle_model/: CMakeLists.txt  coach.h  coach_demo.cpp  demo_common.cpp  demo_common.h  display.h  display_demo.cpp  reservation.h  vehicle.cpp  vehicle.h  vehicle_demo.cpp
